[package]
name = "mountpoint-sqs"
version = "0.1.0"
edition = "2021"
authors = ["Paulo Almeida"]

[dependencies]
fuser = "0.14.0"
libc = "0.2.169"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
env_logger = "0.11.6"
procfs = "0.17.0"
log = "0.4.22"
anyhow = "1.0.95"
aws-config = "1.5.1"
aws-sdk-sqs = "1.30.0"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
