[package]
name = "mountpoint-sqs"
description = "Mount SQS as a filesystem"
version = "0.1.0"
edition = "2021"
authors = ["Paulo Almeida"]
license-file = "LICENSE"
homepage = "https://github.com/PauloMigAlmeida/mountpoint-sqs"

[dependencies]
fuser = "0.16.0"
libc = "0.2.176"
clap = { version = "4.5.48", features = ["cargo", "derive"] }
env_logger = "0.11.6"
procfs = "0.18.0"
log = "0.4.28"
anyhow = "1.0.99"
aws-config = "1.5.12"
aws-sdk-sqs = "1.52.1"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
